--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ html {
   display: none;
 }
 
+.hide {
+  display: none !important;
+}
+
 body {
   background-color: var(--background-primary);
 }
@@ -172,6 +176,8 @@ ul[role="list"] {
     padding: 0.75rem;
     border-radius: 12px;
     background-color: var(--background-secondary);
+    display: flex;
+    gap: 0.75rem;
     align-items: center;
 
     & .checkbox {
@@ -181,13 +187,22 @@ ul[role="list"] {
       background-color: var(--background-secondary);
       border: 1px solid var(--border-primary);
       border-radius: 6px;
+
+   
+
+      &.checked {
+        background-color: var(--color-brand);
+        border-color: var(--color-brand);
+
+    
+      }
     }
   
     & .item {
       width: 100%;
     }
 
-    & .icon-delete {
+    & .item-delete {
       max-width: 2rem;
       width: 100%;
       height: 2rem;
@@ -280,7 +295,7 @@ ul[role="list"] {
         }
       }
 
-      & .icon-delete {
+      & .item-delete {
         cursor: pointer;
 
         transition: scale 400ms;
